added preset browser icons
Former-commit-id: d72ab552832a872deb4b7c8ef24cfe5ecb201372

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
   "zoom": 0.6000000238418579,
-  "animationEnabled": true,
-  "filterOnDrag": true
+  "animationEnabled": 1,
+  "filterOnDrag": 1,
+  "theme": "Dark"
 }
