fixed current tab navigation, bug fixes, preset browser improvments
Former-commit-id: 447cef3590fce225669d7bb56a0d8977d8248b97

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "zoom": 1.0,
   "animationEnabled": 1,
-  "startupAnimation": false,
-  "theme": "Light"
+  "startupAnimation": 1,
+  "theme": "Dark"
 }
