Implemented Ducking and Smoothing (Ducking knob, pre delay not linked)
Former-commit-id: f58e74027b21e5e8c8570081570b87762cd1bd7a

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "zoom": 1.0,
-  "animationEnabled": 1,
-  "startupAnimation": 1,
+  "animationEnabled": false,
+  "startupAnimation": false,
   "theme": "Light"
 }
