--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
-  "zoom": 0.75,
-  "animationEnabled": false,
-  "startupAnimation": false,
-  "theme": "Dark"
+  "zoom": 1.0,
+  "animationEnabled": 1,
+  "startupAnimation": 1,
+  "theme": "Light",
+  "wetOnlyGain": false
 }
