Updated Look and Feel, better EQ
Former-commit-id: d8bb4e11cc0179db2b268af280564cd6794b4755

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "zoom": 1.0,
-  "animationEnabled": 1,
-  "startupAnimation": 1,
-  "theme": "Light",
+  "animationEnabled": true,
+  "startupAnimation": false,
+  "theme": "Dark",
   "wetOnlyGain": false
 }
